Bug 405478 - Fails to initialize without adapter because of missing org.bluez.Media1 interface
Summary: Fails to initialize without adapter because of missing org.bluez.Media1 inter...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-bluez-qt
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.56.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-14 21:10 UTC by Kai Uwe Broulik
Modified: 2019-03-18 11:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.57
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2019-03-14 21:10:20 UTC
SUMMARY
When my Bluetooth adapter is disabled via rfkill (e.g. via the Bluetooth key) Bluez-Qt library refuses to initialize due to a missing org.bluez.Media1 interface. As a result it also doesn't listen to InterfacesAdded signal and refuses to work.

STEPS TO REPRODUCE
1. Quit plasmashell
2. sudo rkfill block bluetooth
3. Start plasmashell
4. Go to Bluetooth plasmoid (hidden in System Tray popup)
5. Click "Enable Bluetooth"

OBSERVED RESULT
Plasmoid says "No adapters found" and doesn't work.
However, at this point the Media1 interface is available and opening the KCM shows that the adapter is fully working. It's just that the Plasmoid doesn't notice this at runtime.

EXPECTED RESULT
Plasmoid switches to normal device view once the adapter has fired up


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David Rosca 2019-03-18 11:09:48 UTC
Git commit 5da57e174696746d887504e46864d3f5bdd20722 by David Rosca.
Committed on 18/03/2019 at 10:09.
Pushed by drosca into branch 'master'.

Manager: Don't require Media1 interface for initialization
FIXED-IN: 5.57

Differential Revision: https://phabricator.kde.org/D19805

M  +0    -5    src/manager_p.cpp

https://commits.kde.org/bluez-qt/5da57e174696746d887504e46864d3f5bdd20722