Manager: Don't require Media1 interface for initialization

BUG: 405478
FIXED-IN: 5.57

Differential Revision: https://phabricator.kde.org/D19805